# copier_template

./: .codespell-ignore  .gitignore  .gitignore.jinja  .pre-commit-config.yaml  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja  setup.cfg  setup.cfg.jinja  test-template.sh  tox.ini  tox.ini.jinja
.github/: dependabot.yml
.github/workflows/: autoupdate.yml  ci.yml  ci.yml.jinja  copier-ci.yml  dev-env.yml.jinja  dev-release.yml  dev.yml  docs.yml  docs.yml.jinja  nightly.yml  release.yml  release.yml.jinja  test.yml  test.yml.jinja
conda/: meta.yaml.jinja
docs/: conf.py.jinja  index.md.jinja
docs/_templates/: doc_version.html.jinja
docs/about/: about.md.jinja  index.md.jinja
docs/api-reference/: index.md
docs/developer/: dependency-management.md.jinja  getting-started.md.jinja  index.md.jinja
docs/deverloper/: index.md.jinja
requirements/: base.in  ci.in  ci.txt  dev.in  docs.in  make_base.py  nightly.in  test.in
src/{% if not namespace_package %}{{projectname}}{% endif %}/: __init__.py.jinja
src/{{projectname}}/: __init__.py.jinja
template/: .gitignore.jinja  .pre-commit-config.yaml  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  tox.ini.jinja
template/conda/: make_conda_meta.py  meta.yaml.jinja  meta_template.yaml  meta_template.yaml.jinja
template/docs/: conf.py.jinja  index.md.jinja
template/requirements/: all.in  basetest.in  dev.in  docs.in  docs.in.jinja  (+2 more)
tests/: package_test.py.jinja  test_package.py.jinja
(+20 files in other folders)
